--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@
 /Lektion06/PaxAsteroids/OSGiLibGDX/target/
 /NetbeansLab1/CommonAsteroid/target/
 /NetbeansLab1/Core/target/
+/NetbeansLab2/application/target/
+/NetbeansLab2/SilentUpdate/target/
+/NetbeansLab2/Core/target/
+/NetbeansLab2/CommonAsteroids/target/
+/NetbeansLab2/Common/target/
+/NetbeansLab2/Asteroid/target/
+/NetbeansLab2/CommonEnemy/target/
+/NetbeansLab2/Player/target/
+/NetbeansLab2/Bullet/target/
+/NetbeansLab2/Enemy/target/
+/NetbeansLab2/Collision/target/
