--- a/NetbeansLab2/Enemy/pom.xml
+++ b/NetbeansLab2/Enemy/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>Common</artifactId>
+            <artifactId>Common-NetBeans2</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
